# prefab-gateway

./: .env.example  .gitignore  CHANGELOG.md  DATABASE_MIGRATION.md  FILE_HANDLING_SETUP.md  QUICKSTART.md  README.md  alembic.ini  prd.md  pyproject.toml
alembic/: env.py
alembic/versions/: 25479ff6ef33_simplify_deployment_status_and_add_.py  6c0b50471560_initial_schema_with_simplified_.py
app/: __init__.py  main.py
app/dependencies/: __init__.py  auth.py
app/routers/: prefabs.py  run.py  secrets.py  webhooks.py
config/: settings.py
db/: __init__.py  base.py  models.py  session.py
models/: __init__.py  requests.py  responses.py
scripts/: db.py  start.py
services/: __init__.py  acl_service.py  encryption.py  file_handler_service.py  spec_cache_service.py  vault_service.py
tests/: conftest.py  test_auth.py  test_secrets.py
