[project]
name = "prefab-gateway"
version = "1.0.0"
description = "AI 预制件生态系统的 API 网关 - 唯一、安全、可控的流量入口"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Platform Engineering Team", email = "platform@example.com" }
]
keywords = ["api-gateway", "prefab", "fastapi", "microservices", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

# 运行时依赖
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    # 数据库相关
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiomysql>=0.2.0",  # MySQL 异步驱动
    "pymysql>=1.1.2",  # MySQL 同步驱动（用于迁移）
    "cryptography>=41.0.0",  # 用于密钥加密
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # 用于测试
    "flake8>=6.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
# 启动脚本
dev = "scripts.start:dev"
start = "scripts.start:start"
prod = "scripts.start:prod"
# 数据库迁移脚本
db-init = "scripts.db:init_db"
db-migrate = "scripts.db:migrate"
db-upgrade = "scripts.db:upgrade"
db-downgrade = "scripts.db:downgrade"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*", "services*", "models*", "scripts*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

